--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1148,3 +1148,15 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2016},
   publisher={Oxford University Press}
 }
+
+@article{FRIEDSON2023104877,
+title = {Cigarette taxes, smoking, and health in the long run},
+journal = {Journal of Public Economics},
+volume = {222},
+pages = {104877},
+year = {2023},
+issn = {0047-2727},
+doi = {https://doi.org/10.1016/j.jpubeco.2023.104877},
+url = {https://www.sciencedirect.com/science/article/pii/S0047272723000592},
+author = {Andrew Friedson and Moyan Li and Katherine Meckel and Daniel I. Rees and Daniel W. Sacks},
+}
